--- a/my-electron/resources/leiningen/new/my_electron/resources/public/index.html
+++ b/my-electron/resources/leiningen/new/my_electron/resources/public/index.html
@@ -9,22 +9,17 @@
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <script>
-        // Use node's require for proper ordering
-        window.$ = window.jQuery = require('jquery');
-        window.Popper = require('popper.js');
-        window.Bootstrap = require('bootstrap');
-    </script>
-
     <!-- Garden -->
     <style id="garden">
     </style>
+
+    <link rel="stylesheet" href="css/react_split.css">
 
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="js/compiled/renderer.js"></script>
+    <script src="js/compiled/frontend.js"></script>
 </body>
 
 </html>
