--- a/my-electron/resources/leiningen/new/my_electron/resources/public/index.html
+++ b/my-electron/resources/leiningen/new/my_electron/resources/public/index.html
@@ -9,17 +9,17 @@
 
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/react_split.css">
+    <script src="js/popper.min.js"></script>
 
     <!-- Garden -->
-    <style id="garden">
-    </style>
-
-    <link rel="stylesheet" href="css/react_split.css">
-
+    <style id="garden"></style>
 </head>
 
 <body>
     <div id="app"></div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/compiled/frontend.js"></script>
 </body>
 
