--- a/my-frontend/resources/leiningen/new/my_frontend/resources/public/index.html
+++ b/my-frontend/resources/leiningen/new/my_frontend/resources/public/index.html
@@ -20,7 +20,7 @@
     <div id="app"></div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/compiled/frontend.js"></script>
+    <script src="js/compiled/app.js"></script>
 </body>
 
 </html>
